# TripVote

./: .gitignore  API_SPEC.md  ARCHITECTURE_BACKEND.md  CLAUDE.md  DEVELOPMENT.md  DEVOPS_RUNBOOK.md  HANDOFF.md  KICKOFF_PROMPT.md  MATCH_LOGIC.md  README.md  SECURITY.md
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
backend/api/: index.py
backend/app/: main.py
backend/app/api/: boards.py  deps.py  health.py  internal.py  notifications.py  proposals.py
backend/app/core/: auth.py  config.py  logging.py  redis.py  sentry.py  supabase.py
backend/app/schemas/: boards.py  proposals.py
backend/app/services/: board_results.py  email.py  match.py  scraper.py
backend/tests/: conftest.py  test_auth.py  test_board_results.py  test_boards.py  test_email.py  test_health.py  test_internal.py  test_match.py  test_notifications.py  test_redis.py  test_scraper.py
docs/adr/: 0001-fastapi-over-spring-boot.md  0002-supabase-rls-not-be-gatekeeper.md  0003-redis-cache-invalidation-via-webhook.md
docs/superpowers/plans/: 2026-05-05-tripvote-backend.md  2026-05-09-auth-clerk.md
docs/superpowers/specs/: 2026-05-07-frontend-design.md  2026-05-09-auth-clerk-design.md
frontend/: .gitignore  middleware.ts  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/app/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/app/: AddProposalModal.tsx  AppContext.tsx  BoardCenter.tsx  CompactProposalCard.tsx  GhostBanner.tsx  ProposalCard.tsx  Sidebar.tsx  UserButton.tsx  VotingPanel.tsx  WebShell.tsx
frontend/components/landing/: Faq.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  LandingNav.tsx  Pricing.tsx  Testimonials.tsx
frontend/components/pages/: ActivityPage.tsx  InvitePage.tsx  ItineraryPage.tsx  MapPage.tsx  ProfilePage.tsx  SearchPage.tsx  SettingsPage.tsx
frontend/components/shared/: Avatar.tsx  Icon.tsx  VoteBar.tsx  VoterGroup.tsx
frontend/lib/: clerk.ts  data.ts  types.ts  utils.ts
infra/: Caddyfile  docker-compose.yml
supabase/migrations/: 0001_init.sql  0002_rls_policies.sql
(+10 files in other folders)
